# opensea-client-rs

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
resources/: response_fulfill_listing_1.4.json  response_fulfill_listing_1.5.json  response_fulfill_listing_1.6.json  response_get_all_listings.json  response_get_collection.json  response_get_listings.json
src/: client.rs  constants.rs  lib.rs  types.rs
src/types/: api.rs  orders.rs  retrieve_listings.rs
src/types/api/: orders.rs
tests/: retrieve_listings_test.rs
tests/common/: mod.rs
