[package]
name = "opensea-client-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
alloy-primitives = { version = "0.8", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls", "json"
] }
serde = "1.0"
thiserror = "1.0"
serde_json = { version = "1.0", features = [
    "arbitrary_precision",
    "preserve_order",
] }
serde_with = { version = "3.9", features = ["chrono_0_4"] }
serde_repr = "0.1"
chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.26", features = ["derive"] }
serde_url_params = "0.2"
num = "0.4"

[dev-dependencies]
tokio = { version = "1.40", features = ["macros"] }
