[package]
name = "opensea-client-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
alloy-primitives = { version = "0.8.9", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
num = "0.4.3"
reqwest = { version = "0.12.8", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.213"
serde_json = { version = "1.0.132", features = ["arbitrary_precision", "preserve_order"] }
serde_repr = "0.1.19"
serde_url_params = "0.2.1"
serde_with = { version = "3.11.0", features = ["chrono_0_4"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.65"

[dev-dependencies]
tokio = { version = "1.41.0", features = ["macros"] }
